@@ -185,15 +185,6 @@ annotation|@
 name|SolrTestCaseJ4
 operator|.
 name|SuppressSSL
-annotation|@
-name|LuceneTestCase
-operator|.
-name|BadApple
-argument_list|(
-name|bugUrl
-operator|=
-literal|"https://issues.apache.org/jira/browse/SOLR-7421"
-argument_list|)
 DECL|class|RecoveryAfterSoftCommitTest
 specifier|public
 class|class
@@ -201,6 +192,20 @@ name|RecoveryAfterSoftCommitTest
 extends|extends
 name|AbstractFullDistribZkTestBase
 block|{
+DECL|field|MAX_BUFFERED_DOCS
+DECL|field|ULOG_NUM_RECORDS_TO_KEEP
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|MAX_BUFFERED_DOCS
+init|=
+literal|2
+decl_stmt|,
+name|ULOG_NUM_RECORDS_TO_KEEP
+init|=
+literal|2
+decl_stmt|;
 DECL|method|RecoveryAfterSoftCommitTest
 specifier|public
 name|RecoveryAfterSoftCommitTest
@@ -231,7 +236,46 @@ name|setProperty
 argument_list|(
 literal|"solr.tests.maxBufferedDocs"
 argument_list|,
-literal|"2"
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|MAX_BUFFERED_DOCS
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"solr.ulog.numRecordsToKeep"
+argument_list|,
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|ULOG_NUM_RECORDS_TO_KEEP
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// the default=7000ms artificially slows down recovery and is not needed for this test
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"solr.cloud.wait-for-updates-with-stale-state-pause"
+argument_list|,
+literal|"500"
+argument_list|)
+expr_stmt|;
+comment|// avoid creating too many files, see SOLR-7421
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"useCompoundFile"
+argument_list|,
+literal|"true"
 argument_list|)
 expr_stmt|;
 block|}
@@ -249,6 +293,27 @@ operator|.
 name|clearProperty
 argument_list|(
 literal|"solr.tests.maxBufferedDocs"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|clearProperty
+argument_list|(
+literal|"solr.ulog.numRecordsToKeep"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|clearProperty
+argument_list|(
+literal|"solr.cloud.wait-for-updates-with-stale-state-pause"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|clearProperty
+argument_list|(
+literal|"useCompoundFile"
 argument_list|)
 expr_stmt|;
 block|}
@@ -303,17 +368,27 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+name|waitForRecoveriesToFinish
+argument_list|(
+name|DEFAULT_COLLECTION
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
 comment|// flush twice
-for|for
-control|(
 name|int
 name|i
 init|=
 literal|0
+decl_stmt|;
+for|for
+control|(
 init|;
 name|i
 operator|<
-literal|4
+name|MAX_BUFFERED_DOCS
+operator|+
+literal|1
 condition|;
 name|i
 operator|++
@@ -424,17 +499,22 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
-comment|// add more than 100 docs so that peer sync cannot be used for recovery
+comment|// add more than ULOG_NUM_RECORDS_TO_KEEP docs so that peer sync cannot be used for recovery
+name|int
+name|MAX_DOCS
+init|=
+literal|2
+operator|+
+name|MAX_BUFFERED_DOCS
+operator|+
+name|ULOG_NUM_RECORDS_TO_KEEP
+decl_stmt|;
 for|for
 control|(
-name|int
-name|i
-init|=
-literal|5
 init|;
 name|i
 operator|<
-literal|115
+name|MAX_DOCS
 condition|;
 name|i
 operator|++
