@@ -176,6 +176,9 @@ Other Changes
 * SOLR-6886: Removed redundant size check and added missing calls to
   DelegatingCollection.finish inside Grouping code.  (Christine Poerschke via shalin)
 
+* SOLR-7421: RecoveryAfterSoftCommitTest fails frequently on Jenkins due to full index
+  replication taking longer than 30 seconds. (Timothy Potter, shalin)
+
 ==================  5.1.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
